Time Tracker Developer Org/src/objects/Timesheet__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Friday_Seconds__c</fullName>
        <label>Friday Seconds</label>
        <summarizedField>Timesheet_Entry__c.Duration__c</summarizedField>
        <summaryFilterItems>
            <field>Timesheet_Entry__c.Day_of_Week__c</field>
            <operation>equals</operation>
            <value>6</value>
        </summaryFilterItems>
        <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Friday_Time_Spent__c</fullName>
        <formula>TEXT( FLOOR(Friday_Seconds__c/3600)) + 

&apos;:&apos; + 

IF( 
FLOOR(MOD(Friday_Seconds__c,3600)/60) &lt; 10, 
&apos;0&apos; + TEXT(FLOOR(MOD(Friday_Seconds__c,3600)/60)), 
TEXT(FLOOR(MOD(Friday_Seconds__c,3600)/60))) + &apos;:&apos; + 

IF( 
MOD(MOD(Friday_Seconds__c,3600),60) &lt; 10, 
&apos;0&apos;+ TEXT(MOD(MOD(Friday_Seconds__c,3600),60)), 
TEXT(MOD(MOD(Friday_Seconds__c,3600),60)))</formula>
        <label>Friday Time Spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday__c</fullName>
        <label>Friday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Current_User_Manager__c</fullName>
        <formula>OR((User__r.ManagerId = $User.Id),(User__r.Manager.ManagerId = $User.Id ),(User__r.Manager.Manager.ManagerId = $User.Id),(User__r.Manager.Manager.Manager.ManagerId = $User.Id),( User__r.Manager.Manager.Manager.Manager.ManagerId = $User.Id),( User__r.Manager.Manager.Manager.Manager.Manager.ManagerId = $User.Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current User Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Submission_Date__c</fullName>
        <label>Latest Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monday_Seconds__c</fullName>
        <label>Monday Seconds</label>
        <summarizedField>Timesheet_Entry__c.Duration__c</summarizedField>
        <summaryFilterItems>
            <field>Timesheet_Entry__c.Day_of_Week__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Monday_Time_Spent__c</fullName>
        <formula>TEXT( FLOOR(Monday_Seconds__c/3600)) + 

&apos;:&apos; + 

IF( 
FLOOR(MOD(Monday_Seconds__c,3600)/60) &lt; 10, 
&apos;0&apos; + TEXT(FLOOR(MOD(Monday_Seconds__c,3600)/60)), 
TEXT(FLOOR(MOD(Monday_Seconds__c,3600)/60))) + &apos;:&apos; + 

IF( 
MOD(MOD(Monday_Seconds__c,3600),60) &lt; 10, 
&apos;0&apos;+ TEXT(MOD(MOD(Monday_Seconds__c,3600),60)), 
TEXT(MOD(MOD(Monday_Seconds__c,3600),60)))</formula>
        <label>Monday Time Spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monday__c</fullName>
        <label>Monday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Rejections__c</fullName>
        <label>Number of Rejections</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Submission_for_Approval__c</fullName>
        <label>Number of Submissions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Saturday_Seconds__c</fullName>
        <label>Saturday Seconds</label>
        <summarizedField>Timesheet_Entry__c.Duration__c</summarizedField>
        <summaryFilterItems>
            <field>Timesheet_Entry__c.Day_of_Week__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Saturday_Time_Spent__c</fullName>
        <formula>TEXT( FLOOR(Saturday_Seconds__c/3600)) + 

&apos;:&apos; + 

IF( 
FLOOR(MOD(Saturday_Seconds__c,3600)/60) &lt; 10, 
&apos;0&apos; + TEXT(FLOOR(MOD(Saturday_Seconds__c,3600)/60)), 
TEXT(FLOOR(MOD(Saturday_Seconds__c,3600)/60))) + &apos;:&apos; + 

IF( 
MOD(MOD(Saturday_Seconds__c,3600),60) &lt; 10, 
&apos;0&apos;+ TEXT(MOD(MOD(Saturday_Seconds__c,3600),60)), 
TEXT(MOD(MOD(Saturday_Seconds__c,3600),60)))</formula>
        <label>Saturday Time Spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saturday__c</fullName>
        <label>Saturday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Early_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Early for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sunday_Seconds__c</fullName>
        <label>Sunday Seconds</label>
        <summarizedField>Timesheet_Entry__c.Duration__c</summarizedField>
        <summaryFilterItems>
            <field>Timesheet_Entry__c.Day_of_Week__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sunday_Time_Spent__c</fullName>
        <formula>TEXT( FLOOR(Sunday_Seconds__c/3600)) + 

&apos;:&apos; + 

IF(
FLOOR(MOD(Sunday_Seconds__c,3600)/60) &lt; 10, 
&apos;0&apos; + TEXT(FLOOR(MOD(Sunday_Seconds__c,3600)/60)), 
TEXT(FLOOR(MOD(Sunday_Seconds__c,3600)/60))) + &apos;:&apos; + 

IF(
MOD(MOD(Sunday_Seconds__c,3600),60) &lt; 10, 
&apos;0&apos;+ TEXT(MOD(MOD(Sunday_Seconds__c,3600),60)), 
TEXT(MOD(MOD(Sunday_Seconds__c,3600),60)))</formula>
        <label>Sunday Time Spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunday__c</fullName>
        <label>Sunday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Thursday_Seconds__c</fullName>
        <label>Thursday Seconds</label>
        <summarizedField>Timesheet_Entry__c.Duration__c</summarizedField>
        <summaryFilterItems>
            <field>Timesheet_Entry__c.Day_of_Week__c</field>
            <operation>equals</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Thursday_Time_Spent__c</fullName>
        <formula>TEXT( FLOOR(Thursday_Seconds__c/3600)) + 

&apos;:&apos; + 

IF( 
FLOOR(MOD(Thursday_Seconds__c,3600)/60) &lt; 10, 
&apos;0&apos; + TEXT(FLOOR(MOD(Thursday_Seconds__c,3600)/60)), 
TEXT(FLOOR(MOD(Thursday_Seconds__c,3600)/60))) + &apos;:&apos; + 

IF( 
MOD(MOD(Thursday_Seconds__c,3600),60) &lt; 10, 
&apos;0&apos;+ TEXT(MOD(MOD(Thursday_Seconds__c,3600),60)), 
TEXT(MOD(MOD(Thursday_Seconds__c,3600),60)))</formula>
        <label>Thursday Time Spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thursday__c</fullName>
        <label>Thursday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Non_Utilized_Time_Spent_New__c</fullName>
        <formula>TEXT( FLOOR( (Total_Seconds__c - Total_Utilized_Seconds_New__c) /3600)) + 
&apos;:&apos; + 

IF( 
FLOOR(MOD((Total_Seconds__c - Total_Utilized_Seconds_New__c),3600)/60) &lt; 10, 
&apos;0&apos; + TEXT(FLOOR(MOD((Total_Seconds__c - Total_Utilized_Seconds_New__c),3600)/60)), 
TEXT(FLOOR(MOD((Total_Seconds__c - Total_Utilized_Seconds_New__c),3600)/60))) + &apos;:&apos; + 
IF( 
MOD(MOD((Total_Seconds__c - Total_Utilized_Seconds_New__c),3600),60) &lt; 10, 
&apos;0&apos;+ TEXT(MOD(MOD((Total_Seconds__c - Total_Utilized_Seconds_New__c),3600),60)), 
TEXT(MOD(MOD((Total_Seconds__c - Total_Utilized_Seconds_New__c),3600),60)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Non Utilized Time Spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Non_Utilized_Time_Spent__c</fullName>
        <formula>TEXT( FLOOR( (Total_Seconds__c -  Total_Utilized_Seconds__c)/3600)) + 

&apos;:&apos; + 

IF( 
FLOOR(MOD((Total_Seconds__c -  Total_Utilized_Seconds__c),3600)/60) &lt; 10, 
&apos;0&apos; + TEXT(FLOOR(MOD((Total_Seconds__c -  Total_Utilized_Seconds__c),3600)/60)), 
TEXT(FLOOR(MOD((Total_Seconds__c -  Total_Utilized_Seconds__c),3600)/60))) + &apos;:&apos; + 

TEXT(ROUND(MOD(MOD((Total_Seconds__c -  Total_Utilized_Seconds__c),3600),60),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Non Utilized Time Spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Seconds__c</fullName>
        <formula>Sunday_Seconds__c + 
Monday_Seconds__c + 
Tuesday_Seconds__c + 
Wednesday_Seconds__c + 
Thursday_Seconds__c + 
Friday_Seconds__c + 
Saturday_Seconds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Spent__c</fullName>
        <formula>TEXT( FLOOR(Total_Seconds__c/3600)) + 

&apos;:&apos; + 

IF( 
FLOOR(MOD(Total_Seconds__c,3600)/60) &lt; 10, 
&apos;0&apos; + TEXT(FLOOR(MOD(Total_Seconds__c,3600)/60)), 
TEXT(FLOOR(MOD(Total_Seconds__c,3600)/60))) + &apos;:&apos; + 

IF( 
MOD(MOD(Total_Seconds__c,3600),60) &lt; 10, 
&apos;0&apos;+ TEXT(MOD(MOD(Total_Seconds__c,3600),60)), 
TEXT(MOD(MOD(Total_Seconds__c,3600),60)))</formula>
        <label>Total Time Spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Utilization_Percentage__c</fullName>
        <description>If weekly hours is defined in customs settings it calculates the percentage of utilization. In the absence of valid values it will show a negative one to show the error.</description>
        <formula>IF ( OR(ISBLANK($Setup.TimeTrackerUserSettings__c.Weekly_Hours__c), $Setup.TimeTrackerUserSettings__c.Weekly_Hours__c &lt;=0), -1, 
 Total_Utilized_Seconds_New__c /($Setup.TimeTrackerUserSettings__c.Weekly_Hours__c*3600)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Utilization Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Utilized_Seconds_New__c</fullName>
        <label>Total Utilized Seconds</label>
        <summarizedField>Timesheet_Entry__c.Duration__c</summarizedField>
        <summaryFilterItems>
            <field>Timesheet_Entry__c.isUtilized__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Utilized_Seconds__c</fullName>
        <label>Total Utilized Seconds</label>
        <summarizedField>Timesheet_Entry__c.Duration__c</summarizedField>
        <summaryFilterItems>
            <field>Timesheet_Entry__c.isUtilized__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Utilized_Time_Spent_New__c</fullName>
        <formula>TEXT( FLOOR( Total_Utilized_Seconds_New__c /3600)) + 

&apos;:&apos; + 

IF( 
FLOOR(MOD(Total_Utilized_Seconds_New__c,3600)/60) &lt; 10, 
&apos;0&apos; + TEXT(FLOOR(MOD(Total_Utilized_Seconds_New__c,3600)/60)), 
TEXT(FLOOR(MOD(Total_Utilized_Seconds_New__c,3600)/60))) + &apos;:&apos; + 

IF( 
MOD(MOD(Total_Utilized_Seconds_New__c,3600),60) &lt; 10, 
&apos;0&apos;+ TEXT(MOD(MOD(Total_Utilized_Seconds_New__c,3600),60)), 
TEXT(MOD(MOD(Total_Utilized_Seconds_New__c,3600),60)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Utilized Time Spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Utilized_Time_Spent__c</fullName>
        <formula>TEXT( FLOOR(Total_Utilized_Seconds__c/3600)) + 

&apos;:&apos; + 

IF( 
FLOOR(MOD(Total_Utilized_Seconds__c,3600)/60) &lt; 10, 
&apos;0&apos; + TEXT(FLOOR(MOD(Total_Utilized_Seconds__c,3600)/60)), 
TEXT(FLOOR(MOD(Total_Utilized_Seconds__c,3600)/60))) + &apos;:&apos; + 

TEXT(ROUND(MOD(MOD(Total_Utilized_Seconds__c,3600),60),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Utilized Time Spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tuesday_Seconds__c</fullName>
        <label>Tuesday Seconds</label>
        <summarizedField>Timesheet_Entry__c.Duration__c</summarizedField>
        <summaryFilterItems>
            <field>Timesheet_Entry__c.Day_of_Week__c</field>
            <operation>equals</operation>
            <value>3</value>
        </summaryFilterItems>
        <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tuesday_Time_Spent__c</fullName>
        <formula>TEXT( FLOOR(Tuesday_Seconds__c/3600)) + 

&apos;:&apos; + 

IF( 
FLOOR(MOD(Tuesday_Seconds__c,3600)/60) &lt; 10, 
&apos;0&apos; + TEXT(FLOOR(MOD(Tuesday_Seconds__c,3600)/60)), 
TEXT(FLOOR(MOD(Tuesday_Seconds__c,3600)/60))) + &apos;:&apos; + 

IF( 
MOD(MOD(Tuesday_Seconds__c,3600),60) &lt; 10, 
&apos;0&apos;+ TEXT(MOD(MOD(Tuesday_Seconds__c,3600),60)), 
TEXT(MOD(MOD(Tuesday_Seconds__c,3600),60)))</formula>
        <label>Tuesday Time Spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tuesday__c</fullName>
        <label>Tuesday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_Timesheet_Identifier__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Timesheet Identifier</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wednesday_Seconds__c</fullName>
        <label>Wednesday Seconds</label>
        <summarizedField>Timesheet_Entry__c.Duration__c</summarizedField>
        <summaryFilterItems>
            <field>Timesheet_Entry__c.Day_of_Week__c</field>
            <operation>equals</operation>
            <value>4</value>
        </summaryFilterItems>
        <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Wednesday_Time_Spent__c</fullName>
        <formula>TEXT( FLOOR(Wednesday_Seconds__c/3600)) + 

&apos;:&apos; + 

IF( 
FLOOR(MOD(Wednesday_Seconds__c,3600)/60) &lt; 10, 
&apos;0&apos; + TEXT(FLOOR(MOD(Wednesday_Seconds__c,3600)/60)), 
TEXT(FLOOR(MOD(Wednesday_Seconds__c,3600)/60))) + &apos;:&apos; + 

IF( 
MOD(MOD(Wednesday_Seconds__c,3600),60) &lt; 10, 
&apos;0&apos;+ TEXT(MOD(MOD(Wednesday_Seconds__c,3600),60)), 
TEXT(MOD(MOD(Wednesday_Seconds__c,3600),60)))</formula>
        <label>Wednesday Time Spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wednesday__c</fullName>
        <label>Wednesday</label>
        <type>Date</type>
    </fields>
    <label>Timesheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Time_Spent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Timesheets</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Time_Spent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Timesheets</label>
    </listViews>
    <listViews>
        <fullName>Approved_Timesheets</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Time_Spent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Timesheets</label>
    </listViews>
    <listViews>
        <fullName>My_Teams_Timesheet</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Time_Spent__c</columns>
        <columns>Total_Seconds__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Current_User_Manager__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Team&apos;s Timesheet</label>
    </listViews>
    <listViews>
        <fullName>New_Timesheets</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Time_Spent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Timesheets</label>
    </listViews>
    <listViews>
        <fullName>Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Time_Spent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Pending Approval</label>
    </listViews>
    <listViews>
        <fullName>Test_Users_timesheets</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>User__c</columns>
        <columns>Total_Time_Spent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>tuser</value>
        </filters>
        <label>Test Users timesheets</label>
    </listViews>
    <nameField>
        <label>Timesheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>